fix: fix mobile menu z-index

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -55,6 +55,7 @@
       position: fixed;
       top: 0;
       left: -100%;
+      z-index: 3;
 
       padding: 2rem 1.5rem;
       gap: 0.5rem;
@@ -125,6 +126,7 @@
       display: flex;
       flex-direction: column;
       position: fixed;
+      z-index: 3;
       top: 0;
       left: -100%;
 
